--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "0.263.1",
-    "@google/genai": "^1.41.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react": "18.2.0"
+    "lucide-react": "0.263.1",
+    "@google/genai": "0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
