--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lucide-react": "0.344.0",
-    "@google/genai": "latest"
+    "@google/genai": "^1.42.0",
+    "lucide-react": "^0.574.0",
+    "react-dom": "^19.2.4",
+    "react": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
