--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.42.0",
-    "lucide-react": "^0.574.0",
+    "@google/genai": "0.1.1",
+    "lucide-react": "0.344.0",
     "react-dom": "^19.2.4",
     "react": "^19.2.4"
   },
