--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "0.1.1",
-    "lucide-react": "0.344.0",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react": "^19.2.4"
+    "lucide-react": "0.344.0",
+    "@google/genai": "0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
